  the browser's location to that path
- Home/end commands are now soft-wrap-aware
- Documentation is now built using DocBook-XSL stylesheets 1.48
- jEdit's build.xml now automatically detects if it is running on Java
  version 1.4, and doesn't build the Java14.java otherwise
- Optimized text area's buffer event handler -- this should result in
  much faster 'Replace All'; more than 40 times faster in the worst
  case!

+ Bug Fixes

- Malformed URL errors were not being reported correctly
- Fixed exception when double- or triple-click dragging (this was meant
  to be fixed in pre5 but I didn't get the fix quite right)
- Fixed NullPointerException when opening a new view
- Out of memory errors were not always reported
- Fixed minor inconsistency in handling of words -vs- keywords in
  'Complete Word' command
- Properly fixed 'unprintable characters in table of contents' bug
- Replace in selection would preserve the current selection, but not
  the caret position, so if there was a match at the start of the
  selection, the caret would move inside the selected range
- On Windows, double-clicking on a drive letter in the drives list of
  the file system browser would open the wrong location
- Fixed obscure focus manager bug under JDK 1.4 that would manifest when
  splitting the view
- The status bar message shown when a bracket is out of bounds was not
  always being displayed if soft wrap was in use
- Fixed silly behavior in 'Install Plugins' dialog box
- Fixed possible NPE when loading tool bar with buttons for which
  actions do not exist
- Fold level changed events were not fired; this caused problems with
  indent folding
- Changing the fold mode using the 'Buffer Options' dialog box in a
  buffer that defined the 'collapseFolds' property could have slightly
  bizzarre results, because the folds were collapsed before the fold
  handler was changed
- Creating rectangular selections on MacOS was not possible since both